<resources>
    <string name="app_name">SaveMoney</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login_here">Already have an account? <b><u>Login</u></b>.</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account?  <b><u>Sign up?</u></b>.</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="title_activity_account_created_modal">AccountCreatedModalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_account_has_been_created_successfully_you_can_now_login">
        Your account has been created successfully. You will be logged in!</string>
    <string name="account_created_successfully">Account Created Successfully!</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="note_if_the_email_that_you_enter_exists_in_our_system_we_will_send_you_a_reset_password_email">NOTE: If the email that you enter exists in our system, we will send you a reset password email</string>
    <string name="profile">Profile</string>
    <string name="reports">Reports</string>
    <string name="transactions">Transactions</string>
    <string name="home">Home</string>
    <string name="success_transaction">Save transaction successfully!</string>
    <string name="success_transaction2">Transaction has been saved successfully and stored in database!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back_to_login">Go back to Login</string>
    <string name="resetpassword">Reset password</string>
    <string name="log_out">Log out</string>
    <string name="change_your_password">Change your password</string>
    <string name="application_term_privacy"><![CDATA[Application Term & Privacy Policy]]></string>
    <string name="privacy">
        Privacy test
    </string>
    <string name="_0">0 Đ</string>
</resources>