<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:orientation="vertical"
		android:layout_margin="10dp"
		tools:context=".RegisterActivity">
	
	<ImageView android:layout_width="200dp" android:layout_height="200dp"
	           android:src="@drawable/main_logo"
	           android:layout_gravity="center"
	           android:layout_marginBottom="10dp"
	/>

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/editTextEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			android:background="@drawable/textview_border"
			android:minHeight="50dp"
			android:layout_margin="5dp"
			android:padding="5dp"/>


	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/editTextPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:hint="@string/password"
			android:minHeight="50dp"
			android:layout_margin="5dp"
			android:background="@drawable/textview_border"
			android:padding="5dp"/>

	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">


		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/editTextConfirmPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:hint="@string/confirm_password"
			android:minHeight="50dp"
			android:layout_margin="5dp"
			android:background="@drawable/textview_border"
			android:padding="5dp"/>

	</com.google.android.material.textfield.TextInputLayout>
	
	<Button
			android:id="@+id/buttonRegister"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:minHeight="48dp"
			android:background="@drawable/my_btn"
			android:textColor="@color/white"
			android:padding="5dp"
			android:layout_margin="5dp"
			android:textSize="24sp"
			android:text="@string/register"/>
	
	<TextView
			android:id="@+id/textViewLoginLink"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:minHeight="48dp"
			android:text="@string/already_have_an_account_login_here"
			android:clickable="true"
			android:gravity="center"
			android:padding="5dp"
			android:layout_margin="5dp"
			android:textColor="@android:color/black"
			android:textSize="16sp"/>
</androidx.appcompat.widget.LinearLayoutCompat>