<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:padding="10dp"
    android:layout_margin="10dp">

    <ImageView android:layout_width="200dp" android:layout_height="200dp"
        android:src="@drawable/main_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_if_the_email_that_you_enter_exists_in_our_system_we_will_send_you_a_reset_password_email"
        android:clickable="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textSize="16sp" android:minHeight="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:background="@drawable/textview_border"
            android:padding="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/my_btn"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"

        android:textSize="20dp"
        android:text="@string/resetpassword"/>

    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_login"
        android:clickable="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="16sp" android:minHeight="48dp"/>

</LinearLayout>