<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="10dp"
		android:id="@+id/container"
		android:padding="10dp">
	
	<ImageView android:layout_width="200dp" android:layout_height="200dp"
	           android:src="@drawable/main_logo"
	           android:layout_gravity="center"
	           android:layout_marginBottom="10dp"/>
	
	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="Email"
			android:minHeight="50dp"
			android:background="@drawable/textview_border"
			android:paddingTop="12dp"
			android:layout_margin="5dp"
			android:padding="5dp"/>

	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:hint="Password"
			android:minHeight="50dp"
			android:background="@drawable/textview_border"
			android:padding="5dp"
			android:layout_margin="5dp"/>

	</com.google.android.material.textfield.TextInputLayout>
	
	<TextView
			android:id="@+id/resetPasswordLink"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="20dp"
			android:textAlignment="textEnd"
			android:text="@string/forgotpassword"/>
	
	<Button
			android:id="@+id/buttonLogin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/my_btn"
			android:textColor="@color/white"
			android:layout_marginTop="35dp"
			
			android:textSize="24sp"
			android:text="@string/login"/>


	
	<TextView
			android:id="@+id/textViewRegisterLink"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/don_t_have_an_account_register_here"
			android:clickable="true"
			android:layout_marginTop="5dp"
			android:gravity="center"
			android:textSize="16sp" android:minHeight="48dp"/>

</LinearLayout>