<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bottomnavigation.ProfileFrag">
    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lavender"
        android:title="My App Title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/manageWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:text="My wallet"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/wallet" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:text="@string/change_your_password"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/password_icon" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:text="@string/application_term_privacy"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/privacy_icon" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:text="About"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/about_icon"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/SendMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:text="Send mail"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/email_icon" />
            <TextView
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:text="@string/log_out"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/logout_icon" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>